--- a/gojava/Dockerfile
+++ b/gojava/Dockerfile
@@ -1,6 +1,6 @@
 FROM timeloveboy/moedocker
 MAINTAINER light4d(account@mirrorsoft.cn)
-ADD install.sh install.sh
+ADD gojava/install.sh install.sh
 RUN sh install.sh
 ENV GOROOT /opt/go
 ENV GOPATH /GOPATH
